Fix modal alignment on mobile

--- a/src/dev/yesgraph-invites.less
+++ b/src/dev/yesgraph-invites.less
@@ -27,6 +27,7 @@
     }
 
     .yes-default-btn {
+        appearance: none;
         background: #1d89cf;
         border: 0;
         border-radius: 3px;
@@ -355,13 +356,14 @@
     z-index: 10000000000;
 }
 
-// Desktop Specific Styles
+// Mobile Specific Styles
 @media only screen and (max-width: 480px) {
     .yes-modal .yes-contact-row .yes-contact-details {
         display: table-cell;
     }
 }
 
+// Desktop Specific Styles
 @media only screen and (min-width: 480px) {
     .yes-widget-container {
         .strict-width(400px);
